src/test/ui/consts/projection_qualif.mut_refs.stderr
error[E0658]: dereferencing raw pointers in constants is unstable
  --> $DIR/projection_qualif.rs:11:18
   |
LL |         unsafe { *b = 5; }
   |                  ^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/51911
   = help: add `#![feature(const_raw_ptr_deref)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
